--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/drawable/rounded_corners_chunk_material.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/drawable/rounded_corners_chunk_material.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
     <shape xmlns:android="http://schemas.android.com/apk/res/android">
-        <solid android:color="@color/white"/>
-        <stroke android:width="1dip" android:color="@color/white" />
+        <solid android:color="@color/colorWhite"/>
+        <stroke android:width="1dip" android:color="@color/colorWhite" />
         <corners android:radius="4dip"/>
         <padding android:left="0dip" android:top="0dip" android:right="0dip" android:bottom="0dip" />
     </shape>
