--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_home__screen.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_home__screen.xml
@@ -1,236 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_material"
+    android:background="@color/colorBackground"
     android:screenOrientation="portrait"
     tools:ignore="Overdraw">
 
-    <ScrollView
+    <org.team930.bears.wears.ButtonView
+        android:id="@+id/buttonView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:ignore="UselessParent">
+        android:layout_height="wrap_content"
+        app:button_function="navigate"
+        app:label="Match Scouter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:next_activity="PreMatch"
+        app:text=">" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="2dp"
-            android:layout_marginRight="2dp"
-            android:orientation="vertical"
-            tools:ignore="ScrollViewSize,UselessParent">
+    <org.team930.bears.wears.ButtonView
+        android:id="@+id/buttonView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:button_function="navigate"
+        app:label="Generate QR"
+        app:layout_constraintBottom_toTopOf="@+id/buttonView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonView"
+        app:layout_constraintVertical_bias="0.0"
+        app:next_activity="QRCreator"
+        app:text=">" />
 
-            <TextView
-                android:id="@+id/revokeAdmin"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:onClick="setRevokeAdmin"
-                android:paddingLeft="8dp"
-                android:paddingTop="4dp"
-                android:text="Main Menu"
-                android:textSize="30dp"
-                tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,SpUsage" /> <!--Main Menu-->
+    <org.team930.bears.wears.ButtonView
+        android:id="@+id/buttonView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:button_function="navigate"
+        app:label="Master Scanner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonView2"
+        app:next_activity="MasterScanner"
+        app:text=">" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_corners_chunk_material"
-                android:orientation="horizontal"
-                android:paddingBottom="10dp"
-                android:paddingLeft="11dp"
-                android:paddingRight="4dp"
-                android:paddingTop="10dp"
-                tools:ignore="RtlHardcoded">
+    <org.team930.bears.wears.ButtonView
+        android:id="@+id/buttonView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:button_function="navigate"
+        app:label="Settings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonView3"
+        app:next_activity="Settings"
+        app:text=">" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="8dp"
-                    android:layout_weight=".75"
-                    android:background="@color/white"
-                    android:maxLines="1"
-                    android:padding="5dp"
-                    android:text="Match Scouter"
-                    android:textColor="@color/textMedium"
-                    android:textSize="30dp"
-                    android:textStyle="italic"
-
-                    tools:ignore="HardcodedText,SpUsage" />
-
-                <Button
-                    android:id="@+id/goToPreMatch"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight=".25"
-                    android:background="@color/darkBlue"
-                    android:onClick="setGoToPreMatch"
-                    android:text=">"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
-
-
-                    tools:ignore="HardcodedText,SpUsage" />
-
-            </LinearLayout> <!--Match Scouter-->
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/background_material"
-                tools:ignore="ContentDescription" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_corners_chunk_material"
-                android:orientation="horizontal"
-                android:paddingBottom="10dp"
-                android:paddingLeft="11dp"
-                android:paddingRight="4dp"
-                android:paddingTop="10dp"
-                tools:ignore="RtlHardcoded">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="8dp"
-                    android:layout_weight=".75"
-                    android:background="@color/white"
-                    android:maxLines="1"
-                    android:padding="5dp"
-                    android:text="Generate QR"
-                    android:textColor="@color/textMedium"
-                    android:textSize="30dp"
-                    android:textStyle="italic"
-
-                    tools:ignore="HardcodedText,SpUsage" />
-
-                <Button
-                    android:id="@+id/goToGenQR"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight=".25"
-                    android:background="@color/mediumBlue"
-                    android:onClick="setGoToGenQR"
-                    android:text=">"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
-
-
-                    tools:ignore="HardcodedText,SpUsage" />
-
-            </LinearLayout> <!--Generate QR Code-->
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/background_material"
-                tools:ignore="ContentDescription" />
-
-            <LinearLayout
-                android:id="@+id/masterScanner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_corners_chunk_material"
-                android:orientation="horizontal"
-                android:paddingBottom="10dp"
-                android:paddingLeft="11dp"
-                android:paddingRight="4dp"
-                android:paddingTop="10dp"
-                android:visibility="gone"
-                tools:ignore="RtlHardcoded">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="8dp"
-                    android:layout_weight=".75"
-                    android:background="@color/white"
-                    android:maxLines="1"
-                    android:padding="5dp"
-                    android:text="Master Scouter"
-                    android:textColor="@color/textMedium"
-                    android:textSize="30dp"
-                    android:textStyle="italic"
-
-                    tools:ignore="HardcodedText,SpUsage" />
-
-                <Button
-                    android:id="@+id/goToMaster"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight=".25"
-                    android:background="@color/lightBlue"
-                    android:onClick="setGoToMasterScanner"
-                    android:text=">"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
-                    tools:ignore="HardcodedText,SpUsage" />
-
-            </LinearLayout> <!--Master-->
-
-            <ImageView
-                android:id="@+id/disappearHomeScreen"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/background_material"
-                android:visibility="gone"
-
-                tools:ignore="ContentDescription" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_corners_chunk_material"
-                android:orientation="horizontal"
-                android:paddingBottom="10dp"
-                android:paddingLeft="11dp"
-                android:paddingRight="4dp"
-                android:paddingTop="10dp"
-                tools:ignore="RtlHardcoded">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="8dp"
-                    android:layout_weight=".75"
-                    android:background="@color/white"
-                    android:maxLines="1"
-                    android:padding="5dp"
-                    android:text="Settings"
-                    android:textColor="@color/textMedium"
-                    android:textSize="30dp"
-                    android:textStyle="italic"
-
-                    tools:ignore="HardcodedText,SpUsage" />
-
-                <Button
-                    android:id="@+id/goToSettings"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight=".25"
-                    android:background="@color/lightBlue"
-                    android:onClick="setGoToSettings"
-                    android:text=">"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
-
-
-                    tools:ignore="HardcodedText,SpUsage" />
-
-            </LinearLayout> <!--Settings-->
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/background_material"
-                tools:ignore="ContentDescription" />
-
-        </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
-
+</androidx.constraintlayout.widget.ConstraintLayout>
