--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_master_scanner.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_master_scanner.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_material"
+    android:background="@color/colorBackground"
     android:screenOrientation="portrait"
     tools:ignore="Overdraw">
 
@@ -28,7 +28,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
+                android:background="@color/colorWhite"
                 android:gravity="center|bottom"
                 android:orientation="vertical">
 
@@ -46,7 +46,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="90dp"
-                    android:background="@color/white"
+                    android:background="@color/colorWhite"
                     tools:ignore="ContentDescription" />
 
                 <Button
@@ -56,10 +56,10 @@
                     android:layout_marginBottom="32dp"
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="50dp"
-                    android:background="@drawable/blue_rounded_button"
+                    android:backgroundTint="@color/colorAccentThree"
                     android:onClick="setGenerateCSV"
                     android:text="Generate Data File"
-                    android:textColor="@color/white"
+                    android:textColor="@color/colorWhite"
                     android:visibility="invisible"
                     tools:ignore="HardcodedText" /> <!--Generate CSV Button-->
 
@@ -69,16 +69,16 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="50dp"
-                    android:background="@drawable/blue_rounded_button"
+                    android:backgroundTint="@color/colorAccentThree"
                     android:onClick="setScanQRCode"
                     android:text="Scan QR Code"
-                    android:textColor="@color/white"
+                    android:textColor="@color/colorWhite"
                     tools:ignore="HardcodedText" /> <!--Scan Code Button-->
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:background="@color/white"
+                    android:background="@color/colorWhite"
                     tools:ignore="ContentDescription" />
 
             </LinearLayout>
