--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_post_match.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_post_match.xml
@@ -4,12 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_material"
+    android:background="@color/colorBackground"
     android:screenOrientation="portrait"
     tools:ignore="Overdraw">
 
     <ScrollView
-        android:id="@+id/titleWindow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -21,13 +20,13 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
-            android:background="@color/background_material"
+            android:background="@color/colorBackground"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:background="@color/background_material"
+                android:background="@color/colorBackground"
                 android:paddingLeft="8dp"
                 android:paddingTop="4dp"
                 android:text="Post Match"
@@ -51,7 +50,7 @@
                     android:layout_gravity="center"
                     android:layout_marginRight="8dp"
                     android:layout_weight=".7"
-                    android:background="@color/white"
+                    android:background="@color/colorWhite"
                     android:maxLines="1"
                     android:padding="5dp"
                     android:text="Match Result"
@@ -62,13 +61,12 @@
                     tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />
 
                 <ToggleButton
-                    android:id="@+id/winLossButton"
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_weight=".3"
                     android:background="@drawable/toggle_button_winloss"
                     android:checked="true"
-                    android:textColor="@color/white"
+                    android:textColor="@color/colorWhite"
                     android:textOff="Loss"
                     android:textOn="Win"
                     tools:ignore="HardcodedText" />
@@ -79,7 +77,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/background_material"
+                android:background="@color/colorBackground"
                 tools:ignore="ContentDescription" />
 
             <LinearLayout
@@ -99,7 +97,7 @@
                     android:layout_gravity="center"
                     android:layout_marginRight="8dp"
                     android:layout_weight=".7"
-                    android:background="@color/white"
+                    android:background="@color/colorWhite"
                     android:maxLines="1"
                     android:padding="5dp"
                     android:text="Disabled"
@@ -116,7 +114,7 @@
                     android:layout_weight=".3"
                     android:background="@drawable/toggle_button_at_no_round"
                     android:onClick="setDisabled"
-                    android:textColor="@color/white"
+                    android:textColor="@color/colorWhite"
                     android:textOff="Not Disabled"
                     android:textOn="Disabled"
 
@@ -127,7 +125,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/background_material"
+                android:background="@color/colorBackground"
                 tools:ignore="ContentDescription" />
 
             <LinearLayout
@@ -147,7 +145,7 @@
                     android:layout_gravity="center"
                     android:layout_marginRight="8dp"
                     android:layout_weight=".7"
-                    android:background="@color/white"
+                    android:background="@color/colorWhite"
                     android:maxLines="1"
                     android:paddingLeft="11dp"
                     android:paddingRight="5dp"
@@ -181,7 +179,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/background_material"
+                android:background="@color/colorBackground"
                 tools:ignore="ContentDescription" />
 
             <LinearLayout
@@ -201,7 +199,7 @@
                     android:layout_gravity="center"
                     android:layout_marginRight="8dp"
                     android:layout_weight=".7"
-                    android:background="@color/white"
+                    android:background="@color/colorWhite"
                     android:maxLines="1"
                     android:paddingLeft="11dp"
                     android:paddingRight="5dp"
@@ -229,17 +227,15 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="16dp"
-                android:background="@color/background_material"
+                android:background="@color/colorBackground"
                 tools:ignore="ContentDescription" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/background_material"
                 android:gravity="center|bottom"
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/finish"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rounded_corners_chunk_material"
@@ -253,17 +249,16 @@
                         android:id="@+id/submitData"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/lightBlue"
+                        android:background="@color/colorBase"
                         android:onClick="setSubmitData"
                         android:text="Submit Data"
-                        android:textColor="@color/white"
+                        android:textColor="@color/colorWhite"
                         tools:ignore="HardcodedText" />
                 </LinearLayout>
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="8dp"
-                    android:background="@color/background_material"
                     tools:ignore="ContentDescription" />
 
             </LinearLayout> <!--Next-->
