--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/checkbox_view.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/checkbox_view.xml
@@ -8,8 +8,7 @@
     android:orientation="vertical"
     android:clickable="true"
     android:focusable="true"
-    android:layout_marginBottom="2dp"
-    android:layout_marginTop="2dp"
+    android:layout_margin="2dp"
     android:padding="5dp">
 
     <TextView
@@ -19,7 +18,7 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:paddingBottom="4dp"
-        android:background="@color/white"
+        android:background="@color/colorWhite"
         android:gravity="left|center"
         android:text="default"
         android:fontFamily="@font/montserratitalic"
