--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/spinner_view.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/spinner_view.xml
@@ -13,12 +13,11 @@
 
         <TextView
             android:id="@+id/spinnerLabelView"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_weight="2.7"
-            android:background="@color/white"
+            android:layout_marginRight="12dp"
+            android:background="@color/colorWhite"
             android:gravity="left|center"
             android:text="default"
             android:fontFamily="@font/montserratitalic"
@@ -27,9 +26,8 @@
 
         <Spinner
             android:id="@+id/spinner"
-            android:layout_width="0dp"
+            android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight=".7"
             android:textSize="20sp"
             android:gravity="left|center_vertical"
             android:spinnerMode="dialog"
