--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/textbox_view.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/textbox_view.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,8 +8,9 @@
     android:focusable="true"
     android:layout_margin="2dp"
     android:padding="5dp">
+
     <TextView
-        android:id="@+id/chronometerLabelView"
+        android:id="@+id/textboxTopLabelView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginLeft="4dp"
@@ -23,46 +23,40 @@
         android:textSize="30sp"
         tools:ignore="HardcodedText,NestedWeights,RtlHardcoded,SpUsage" />
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/chronometerStart"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:backgroundTint="@color/colorAccentTwo"
-            android:text="Start"
-            android:fontFamily="@font/montserratbold"
-            android:textColor="@color/textDark"
-            android:textAllCaps="false"
-            android:gravity="center"/>
-
-        <Chronometer
-            android:id="@+id/chronometer"
+        <TextView
+            android:id="@+id/textboxSideLabelView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight=".5"
-            android:fontFamily="@font/montserratbold"
+            android:layout_weight="4"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:background="@color/colorWhite"
+            android:gravity="left|center"
+            android:text="default"
+            android:fontFamily="@font/montserratitalic"
             android:textSize="30sp"
-            android:gravity="center"
-            android:layout_marginEnd="8dp"
-            />
+            tools:ignore="HardcodedText,NestedWeights,RtlHardcoded,SpUsage" />
 
-        <Button
-            android:id="@+id/chronometerStop"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:text="Reset"
-            android:backgroundTint="@color/colorAccentTwo"
-            android:fontFamily="@font/montserratbold"
-            android:textColor="@color/textDark"
-            android:textAllCaps="false"
-            android:gravity="center"
-            />
-
-
+        <EditText
+            android:id="@+id/textbox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:background="@drawable/edit_text_border"
+            android:inputType="text"
+            android:hint="default_hint"
+            android:text=""
+            android:fontFamily="@font/montserratmedium"
+            android:textSize="18sp"
+            tools:ignore="HardcodedText,NestedWeights,RtlHardcoded,SpUsage" />
     </LinearLayout>
 
 </LinearLayout>
