--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/values/attrs.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/values/attrs.xml
@@ -5,6 +5,25 @@
         <attr name="base" format="integer"></attr>
     </declare-styleable>
 
+    <declare-styleable name="button">
+        <attr name="text" format="string" > </attr>
+        <attr name="button_function" format="enum">
+            <enum name="navigate" value="0"/>
+            <enum name="delete" value="1"/>
+
+        </attr>
+        <attr name="next_activity" format="string"/>
+    </declare-styleable>
+
+    <declare-styleable name="textbox">
+        <attr name="hint" format="string" ></attr>
+        <attr name="label_location" format="enum">
+            <enum name="top" value="0"/>
+            <enum name="side" value="1"/>
+            <enum name="none" value="2"/>
+        </attr>
+    </declare-styleable>
+
     <declare-styleable name="global">
         <attr name="label" format="string" ></attr>
         <attr name="android:entries" />
