--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/values/styles.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/values/styles.xml
@@ -1,51 +1,40 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:colorBackground">@color/background_material</item>
+        <item name="colorPrimary">@color/colorDarkBlue</item>
+        <item name="colorPrimaryDark">@color/colorDarkBlue</item>
+        <item name="colorAccent">@color/colorAccentOne</item>
+        <item name="android:colorBackground">@color/colorBackground</item>
         <item name="android:textColorPrimary">@color/textMedium</item>
-        <item name="colorControlActivated">@color/lightBlue</item>
-        <item name="colorButtonNormal">@color/lightBlue</item>
+        <item name="colorControlActivated">@color/colorBase</item>
+        <item name="colorButtonNormal">@color/colorBase</item>
+        <item name="android:elevation">0dp</item>
+        <item name="android:stateListAnimator">@null</item>
         <item name="android:spinnerDropDownItemStyle">@style/mySpinnerItemStyle</item>
         <item name="android:spinnerItemStyle">@style/mySpinnerItemStyle</item>
-        <item name="android:editTextColor">@color/black</item>
+        <item name="android:editTextColor">@color/colorBlack</item>
         <item name="android:fontFamily">@font/montserratregular</item>
 
     </style>
 
 
-    <style name="mySpinnerItemStyle">
-        <item name="android:textColor">@color/black</item>
+    <style name="mySpinnerItemStyle" parent="android:Widget.TextView.SpinnerItem">
+        <item name="android:textColor">@color/colorBlack</item>
         <item name="android:textSize" >20sp</item>
-        <item name="android:padding">2dp</item>
+        <item name="android:paddingLeft">2dp</item>
+        <item name="android:paddingRight">2dp</item>
         <item name="android:popupBackground">#ffffff</item>
         <item name="android:fontFamily">@font/montserratregular</item>
         <item name="android:background">#ffffff</item>
     </style>
 
-    <style name="myRadioButtonStyle" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorControlNormal">@color/lightBlue</item>
-        <item name="colorControlActivated">@color/lightBlue</item>
-    </style>
-
-    <style name="mySwitchStyle" parent="Theme.AppCompat.Light">
+    <style name="mySwitchStyle" parent="Base.Theme.AppCompat.Light">
         <!-- active thumb & track color (30% transparency) -->
-        <item name="colorControlActivated">@color/lightBlue</item>
-        <item name="colorSwitchThumbNormal">#f1f1f1</item>
-        <item name="android:colorForeground">#42221f1f</item>
-    </style>
-
-    <style name="myCheckBoxItemStyle">
-        <item name="android:textColor">#fdfdfd</item>
-        <item name="android:textSize" >16sp</item>
-        <item name="android:padding">2dp</item>
-        <item name="android:popupBackground">#ffffff</item>
-        <item name="android:fontFamily">@font/montserratregular</item>
-        <item name="android:background">#ffffff</item>
+        <item name="colorControlActivated">@color/colorBase</item>
+        <item name="colorSwitchThumbNormal">@color/textLight</item>
+        <item name="android:colorForeground">@color/textDark</item>
     </style>
 
 
