--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_autonteleop.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_autonteleop.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/relativeLayout"
+    android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
@@ -11,106 +11,129 @@
 
     <!--SANDSTORM-->
 
-    <org.team930.bears.wears.SpinnerView
-        android:id="@+id/spinnerView2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:entries="@array/spinnerList"
 
-        app:label="Spinner"
+    <org.team930.bears.wears.CheckboxView
+        android:id="@+id/checkboxView2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:entries="@array/checkboxList"
+        app:label="Checkbox"
+        app:layout_constraintEnd_toStartOf="@+id/guideline33"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <org.team930.bears.wears.ButtonView
+        android:id="@+id/buttonView6"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:button_function="nav_confirm"
+        app:confirm_message="Press Again to Continue To Post Match"
+        app:label="NextActivity"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="HardcodedText"
-        tools:layout_editor_absoluteY="16dp" />
+        app:next_activity="PostMatch"
+        app:text="next" />
+
+    <org.team930.bears.wears.ChronometerView
+        android:id="@+id/chronometerView2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:label="Chronometer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline50"
+        app:layout_constraintTop_toBottomOf="@+id/textboxView2" />
+
+    <org.team930.bears.wears.SpinnerView
+        android:id="@+id/spinnerView2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+
+        android:entries="@array/spinnerList"
+        app:label="Spinner"
+        app:layout_constraintEnd_toStartOf="@+id/guideline33"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkboxView2"
+        tools:ignore="HardcodedText" />
 
     <org.team930.bears.wears.CounterView
         android:id="@+id/counterView2"
-        android:layout_width="fill_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+
         app:base="0"
         app:increment="1"
-
-        app:label="Counter"
-        app:layout_constraintBottom_toTopOf="@+id/textboxView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <org.team930.bears.wears.ToggleView
-        android:id="@+id/toggleView2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        app:label="Toggle"
-        app:layout_constraintBottom_toTopOf="@+id/seekbarView2"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:label="Missed"
+        app:layout_constraintEnd_toStartOf="@+id/guideline33"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkboxView2"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintWidth_percent="0.5">
+        app:layout_constraintTop_toBottomOf="@+id/spinnerView2" />
 
-    </org.team930.bears.wears.ToggleView>
+    <org.team930.bears.wears.TextboxView
+        android:id="@+id/textboxView2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:hint="default_hint"
+        app:label="Small"
+        app:label_location="side"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline66"
+        app:layout_constraintTop_toBottomOf="@+id/seekbarView2" />
 
     <org.team930.bears.wears.SeekbarView
         android:id="@+id/seekbarView2"
-        android:layout_width="fill_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:ceil="5"
+
         app:ceil_name="Shut down"
         app:floor="1"
         app:floor_name="Didn't affect"
         app:label="Seekbar"
-
-        app:layout_constraintBottom_toTopOf="@+id/chronometerView2"
-        app:layout_constraintEnd_toStartOf="@+id/chronometerView2"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="@+id/guideline50"
+        app:layout_constraintTop_toBottomOf="@+id/toggleView2"
         app:zero_name="Not Ranked" />
 
-    <org.team930.bears.wears.ChronometerView
-        android:id="@+id/chronometerView2"
-        android:layout_width="fill_parent"
+    <org.team930.bears.wears.ToggleView
+        android:id="@+id/toggleView2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:label="Chronometer"
-        app:layout_constraintBottom_toTopOf="@+id/counterView2"
+        app:label="Toggle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guideline50"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.5">
 
-    <org.team930.bears.wears.CheckboxView
-        android:id="@+id/checkboxView2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:entries="@array/checkboxList"
-        app:label="Checkbox" />
-
-
-    <org.team930.bears.wears.TextboxView
-        android:id="@+id/textboxView2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        app:hint="default_hint"
-        app:label="EditText"
-        app:label_location="none"
-        app:layout_constraintBottom_toTopOf="@+id/buttonView6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <org.team930.bears.wears.ButtonView
-        android:id="@+id/buttonView6"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        app:button_function="navigate"
-        app:label="NextActivity"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:next_activity="PostMatch"
-        app:text="next"
-        tools:layout_editor_absoluteY="570dp" />
+    </org.team930.bears.wears.ToggleView>
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
+        android:id="@+id/guideline50"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="300dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_percent="0.5"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline33"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="320dp"
+        app:layout_constraintGuide_percent=".40" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline66"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.66"
+        app:layout_constraintHorizontal_bias="0.66" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
