--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_settings.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/activity_settings.xml
@@ -1,191 +1,84 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--suppress ALL -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!--suppress ALL -->
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
-    android:screenOrientation="portrait"
-    tools:ignore="Overdraw">
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:background="@color/colorBackground">
 
-    <ScrollView
+
+    <!--Scouter Position-->
+
+    <!--Admin-->
+    <!--Delete le Data-->
+    <org.team930.bears.wears.SpinnerView
+        android:id="@+id/scouterPos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:ignore="UselessParent">
-
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:entries="@array/scouterPos"
+        app:label="Field Position"
+        app:next_activity="Settings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/adminUnlock"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:orientation="vertical"
-        tools:ignore="ScrollViewSize">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:paddingLeft="8dp"
-            android:paddingTop="4dp"
-            android:text="Settings"
-            android:textSize="30dp"
-            android:onClick="setRevokeStill"
-            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,SpUsage" />
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_corners_chunk_material"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/scouterPos"
+        tools:ignore="RtlHardcoded">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_corners_chunk_material"
-            android:orientation="horizontal"
-            android:paddingBottom="10dp"
-            android:paddingLeft="11dp"
-            android:paddingRight="4dp"
-            android:paddingTop="10dp"
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="4dp"
+            android:layout_weight=".7"
+            android:background="@color/colorWhite"
+            android:hint="Admin Password"
+            android:maxLength="6"
+            android:textColor="@color/textMedium"
+            android:textSize="28dp"
+            tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />
 
-            tools:ignore="RtlHardcoded">
+        <Button
+            android:id="@+id/submitPassword"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight=".3"
+            android:backgroundTint="@color/colorAccentThree"
+            android:onClick="setSubmitPassword"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="Unlock"
+            android:textColor="@color/colorWhite"
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_gravity="center"
-                android:layout_marginRight="8dp"
-                android:layout_weight=".7"
-                android:background="@color/colorWhite"
-                android:textSize="30dp"
-                android:padding="5dp"
-                android:text="Position"
-                android:textColor="@color/textMedium"
-                tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />
-
-            <Spinner
-                android:id="@+id/scouterPosition"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight=".5"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:entries="@array/scouterPos"
-                android:popupTheme="@style/mySpinnerItemStyle"
-                tools:ignore="HardcodedText" />
-
-        </LinearLayout> <!--Scouter Position-->
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:visibility="visible"
-            tools:ignore="ContentDescription" />
-
-        <LinearLayout
-            android:id="@+id/adminUnlock"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_corners_chunk_material"
-            android:orientation="horizontal"
-            android:paddingBottom="10dp"
-            android:paddingLeft="11dp"
-            android:paddingRight="4dp"
-            android:paddingTop="10dp"
-
-            tools:ignore="RtlHardcoded">
-
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_gravity="center"
-                android:layout_marginRight="8dp"
-                android:layout_weight=".7"
-                android:background="@color/colorWhite"
-                android:hint="Admin Password"
-                android:maxLength="6"
-                android:textSize="28dp"
-                android:inputType="numberPassword"
-                android:padding="5dp"
-                android:textColor="@color/textMedium"
-                tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />
-
-            <Button
-                android:id="@+id/submitPassword"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight=".3"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:backgroundTint="@color/colorAccentThree"
-                android:onClick="setSubmitPassword"
-                android:textColor="@color/colorWhite"
-                android:text="Unlock"
-
-                tools:ignore="HardcodedText" />
-
-        </LinearLayout> <!--Admin-->
-
-        <ImageView
-            android:id="@+id/disappearAdmin"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:visibility="gone"
-            tools:ignore="ContentDescription" />
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-            <LinearLayout
-                android:id="@+id/deleteBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_corners_chunk_material"
-                android:orientation="horizontal"
-                android:paddingBottom="10dp"
-                android:paddingLeft="11dp"
-                android:paddingRight="4dp"
-                android:paddingTop="10dp"
-                android:visibility="gone"
-                tools:ignore="RtlHardcoded,UselessParent">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="8dp"
-                    android:layout_weight=".7"
-                    android:background="@color/colorWhite"
-                    android:maxLines="1"
-                    android:padding="5dp"
-                    android:text="Delete \'Le Data\'"
-                    android:textStyle="italic"
-                    android:textColor="@color/textMedium"
-                    android:textSize="30dp"
-                    android:visibility="visible"
-
-                    tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />
-
-                <Button
-                    android:id="@+id/deleteData"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight=".3"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:backgroundTint="@color/colorAccentThree"
-                    android:text="Delete Data"
-                    android:visibility="visible"
-                    android:textColor="@color/colorWhite"
-                    android:onClick="setDeleteData"
-
-                    tools:ignore="HardcodedText" />
-
-            </LinearLayout>
-
-        </LinearLayout> <!--Delete le Data-->
-
+            tools:ignore="HardcodedText" />
 
     </LinearLayout>
 
-    </ScrollView>
-</RelativeLayout>
+    <org.team930.bears.wears.ButtonView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:button_function="delete"
+        app:label="Delete 'le data'"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/adminUnlock"
+        app:next_activity="Settings"
+        app:text="Confirm"
+        app:confirm_message="Please Click Again to Delete Data"
+        />
+</androidx.constraintlayout.widget.ConstraintLayout>
 
