--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/checkbox_view.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/checkbox_view.xml
@@ -8,7 +8,8 @@
     android:orientation="vertical"
     android:clickable="true"
     android:focusable="true"
-    android:layout_margin="2dp"
+    android:layout_marginBottom="2dp"
+    android:layout_marginTop="2dp"
     android:padding="5dp">
 
     <TextView
