--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/counter_view.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/counter_view.xml
@@ -6,7 +6,8 @@
     android:orientation="horizontal"
     android:clickable="true"
     android:focusable="true"
-    android:layout_margin="2dp"
+    android:layout_marginBottom="2dp"
+    android:layout_marginTop="2dp"
     android:padding="5dp">
 
         <TextView
@@ -28,7 +29,7 @@
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight=".7"
-            android:text="-1"
+            android:text="-"
             android:textColor="@color/textWhite"
             android:textSize="20sp"
             android:fontFamily="@font/montserratbold"
@@ -53,7 +54,7 @@
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight=".7"
-            android:text="+1"
+            android:text="+"
             android:textColor="@color/textWhite"
             android:textSize="20sp"
             android:fontFamily="@font/montserratbold"
