--- a/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/top_textbox_view.xml
+++ b/Watching_Extremely_Awesome_Robots_safely/WEARs/src/main/res/layout/top_textbox_view.xml
@@ -3,36 +3,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="2dp"
     android:background="@drawable/rounded_corners_chunk_material"
-    android:orientation="horizontal"
     android:clickable="true"
     android:focusable="true"
-    android:layout_marginBottom="2dp"
-    android:layout_marginTop="2dp"
+    android:focusableInTouchMode="true"
     android:padding="5dp">
 
+
     <TextView
-        android:id="@+id/buttonLabelView"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:id="@+id/textboxTopLabelView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/colorWhite"
         android:fontFamily="@font/montserratitalic"
         android:gravity="left|center"
         android:text="default"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHeight_percent=".5"
         tools:ignore="HardcodedText,NestedWeights,RtlHardcoded,SpUsage" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:fontFamily="@font/montserratbold"
-        android:textColor="@color/colorWhite"
+    <EditText
+        android:id="@+id/textboxTop"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/edit_text_border"
+        android:fontFamily="@font/montserratmedium"
+        android:hint="default_hint"
+        android:inputType="text"
+        android:text=""
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHeight_percent=".5"
+        app:layout_constraintTop_toBottomOf="@+id/textboxTopLabelView"
+        tools:ignore="HardcodedText,NestedWeights,RtlHardcoded,SpUsage" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
